@@ -1,16 +1,20 @@
 libevt is a library to access the Windows Event Log (EVT) format.
 
 Project information:
+
 * Status: alpha
 * Licence: LGPLv3+
 
 Work in progress:
+
 * Python 3 support
 
 Planned:
+
 * Multi-threading support
 
 For more information see:
+
 * Project documentation: https://github.com/libyal/libevt/wiki/Home
 * How to build from source: https://github.com/libyal/libevt/wiki/Building
 
