@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libevt],
- [20150707],
+ [20150725],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -253,7 +253,6 @@ AC_CONFIG_FILES([common/types.h])
 AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([dpkg/copyright])
 AC_CONFIG_FILES([libevt/libevt.rc])
-AC_CONFIG_FILES([pyevt/setup.py])
 AC_CONFIG_FILES([libevt.pc])
 AC_CONFIG_FILES([libevt.spec])
 dnl Have configure write its configuration
